commit#1 Added DAO classes

--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,14 @@
+db.driver.classname = com.mysql.cj.jdbc.Driver
 db.url = jdbc:mysql://localhost:3306/webshop?sslMode=DISABLED&serverTimezone = UTC
 db.user = root
 db.password = Metalic0s
+
+
+
+
+
+
+cipher.first.key = ssdkF$HUy2A#D%kd
+cipher.second.key = weJiSEvR5yAC5ftB
+cipher.salt = d#dFf4$
+cipher.charset = UTF-8
