commit#2 - password is encripted, added DAO classes

--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 db.driver.classname = com.mysql.cj.jdbc.Driver
-db.url = jdbc:mysql://localhost:3306/webshop?sslMode=DISABLED&serverTimezone = UTC
+db.url = jdbc:mysql://localhost:3306/webshop?allowPublicKeyRetrieval=true&sslMode=DISABLED&serverTimezone = UTC
 db.user = root
 db.password = Metalic0s
 
