--- a/application.properties
+++ b/application.properties
@@ -1,14 +1,36 @@
+################### SECURITY SETTINGS
+cipher.first.key = ssdkF$HUy2A#D%kd
+cipher.second.key = weJiSEvR5yAC5ftB
+cipher.salt = d#dFf4$
+cipher.charset = UTF-8
+
+################### DB SETTINGS
 db.driver.classname = com.mysql.cj.jdbc.Driver
 db.url = jdbc:mysql://localhost:3306/webshop?allowPublicKeyRetrieval=true&sslMode=DISABLED&serverTimezone = UTC
 db.user = root
 db.password = Metalic0s
 
+################### SQL QUERIES --ACCOUNT--
+sql.create_account = INSERT INTO `webshop`.`account` (`email`, `password`, `create_time`, `role_id`, `shopping_cart_id`) VALUES (?,?,?,?,?);
+sql.read_account_by_id = SELECT * FROM `webshop`.`account` WHERE `id` = ?;
+sql.read_account_by_email = SELECT * FROM `webshop`.`account` WHERE `email` = ?;
+sql.update_account = UPDATE `webshop`.`account` SET `email`= ?, `password`= ?, `role_id`= ? WHERE `id` = ?;
+sql.delete_account = DELETE FROM `webshop`.`account` WHERE `id` = ?;
 
+################### SQL QUERIES --ACCOUNT DETAIL--
+sql.create_account_details = INSERT INTO `webshop`.`account_detail` (`phone`,`zip_code`,`last_update`,`surname_ua`,`first_name_ua`,`patronymic_ua`,`country_ua`,`city_ua`,`street_ua`,`building_ua`,`flat_ua`,`surname_en`,`first_name_en`,`patronymic_en`,`country_en`,`city_en`,`street_en`,`building_en`,`flat_en`,`account_photo`,`account_id`) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
+sql.read_account_details_by_id = SELECT * FROM `webshop`.`account_detail` WHERE `account_id` = ?;
+sql.update_account_details = UPDATE `webshop`.`account_detail` SET `phone`= ?,`zip_code`= ?,`last_update`= ?,`surname_ua`= ?,`first_name_ua`= ?,`patronymic_ua`= ?,`country_ua`= ?, `city_ua`= ?,`street_ua`= ?,`building_ua`= ?,`flat_ua`= ?,`surname_en`= ?,`first_name_en`= ?,`patronymic_en`= ?,`country_en`= ?,`city_en`= ?,`street_en`= ?,`building_en`= ?,`flat_en`= ?,`account_photo`= ?,`account_id`= ? WHERE id = ?;
+sql.delete_account_details = DELETE FROM `webshop`.`account_detail` WHERE `account_id` = ?;
 
+################### SQL QUERIES --SHOPPING CART--
+sql.create_shopping_cart = INSERT INTO `webshop`.`shopping_cart` (`last_update`) VALUES (?);
+sql.read_shopping_cart = SELECT * FROM `webshop`.`shopping_cart` WHERE id = ?;
+sql.update_shopping_cart = UPDATE `webshop`.`shopping_cart` SET `last_update`= ? WHERE id = ?;
+sql.delete_shopping_cart = DELETE FROM `webshop`.`shopping_cart` WHERE id = ?;
 
-
-
-cipher.first.key = ssdkF$HUy2A#D%kd
-cipher.second.key = weJiSEvR5yAC5ftB
-cipher.salt = d#dFf4$
-cipher.charset = UTF-8
+################### SQL QUERIES --S --
+sql.create_shopping_cart_has_product = INSERT
+sql.read_shopping_cart_has_product = SELECT
+sql.update_shopping_cart_has_product = UPDATE
+sql.delete_shopping_cart_has_product = DELETE
