commit#2 added JavaDocs

--- a/application.properties
+++ b/application.properties
@@ -28,7 +28,6 @@ sql.create_shopping_cart = INSERT INTO `webshop`.`shopping_cart` (`last_update`)
 sql.read_shopping_cart = SELECT * FROM `webshop`.`shopping_cart` WHERE id = ?;
 sql.update_shopping_cart = UPDATE `webshop`.`shopping_cart` SET `last_update`= ? WHERE id = ?;
 sql.delete_shopping_cart = DELETE FROM `webshop`.`shopping_cart` WHERE id = ?;
-
 sql.create_product_in_cart = INSERT INTO webshop.shopping_cart_has_product (`shopping_cart_id`, `product_id`,`product_amount`) VALUES (?,?,?);
 sql.read_all_products_by_cart_id = SELECT cart.id, cart_h_product.product_id as product_id, cart_h_product.product_amount as product_pcs_at_cart, cart.last_update as cart_last_update FROM webshop.shopping_cart AS cart INNER JOIN webshop.shopping_cart_has_product AS cart_h_product ON cart.id = cart_h_product.shopping_cart_id WHERE cart.id = ?;
 sql.read_product_from_cart_by_id = SELECT * FROM webshop.shopping_cart_has_product WHERE shopping_cart_id=? AND product_id=?;
@@ -38,14 +37,30 @@ sql.delete_product_in_cart = DELETE FROM webshop.shopping_cart_has_product WHERE
 
 ################### SQL QUERIES --ACCOUNT ORDER --
 sql.create_account_order = INSERT INTO `webshop`.`account_order` (`create_time`,`account_id`,`status_id`,`droped_by_account_id`) VALUES (?,?,?,?);
-sql.read__account_order = SELECT * FROM `webshop`.`account_order` WHERE id = ?;
-sql.update__account_order = UPDATE `webshop`.`account_order` SET `account_id`= ?, `status_id`=?, `droped_by_account_id`=?  WHERE id = ?;
-sql.delete__account_order = DELETE FROM `webshop`.`account_order` WHERE id = ?;
+sql.read_account_order = SELECT * FROM `webshop`.`account_order` WHERE id = ?;
+sql.update_account_order = UPDATE `webshop`.`account_order` SET `account_id`= ?, `status_id`=?, `droped_by_account_id`=?  WHERE id = ?;
+sql.delete_account_order = DELETE FROM `webshop`.`account_order` WHERE id = ?;
+sql.create_product_in_order = INSERT INTO webshop.account_order_has_product (`account_order_id`, `product_id`,`price`,`product_amount`,`create_time`,`last_update`) VALUES (?,?,?,?,?,?);
+sql.read_all_products_in_order = SELECT * FROM webshop.account_order AS a_order INNER JOIN webshop.account_order_has_product AS order_h_product ON a_order.id = order_h_product.account_order_id WHERE a_order.id = ?;
+sql.read_product_from_order_by_id = SELECT * FROM webshop.account_order_has_product WHERE `account_order_id` = ? AND `product_id` = ?;
+sql.update_product_in_order = UPDATE webshop.account_order_has_product SET price=?,product_amount=? WHERE account_order_id=? AND product_id=?;
+sql.delete_all_products_in_order = DELETE FROM webshop.account_order_has_product WHERE account_order_id = ?;
+sql.delete_product_in_order = DELETE FROM webshop.account_order_has_product WHERE `account_order_id` = ? AND `product_id` = ?;
 
-sql.create_product_in_order =
-sql.read_all_products_in_order =
-sql.read_product_from_order_by_id =
-sql.update_product_in_order
-sql.delete_all_products_in_order =
-sql.delete_product_in_order =
+################### SQL QUERIES --PRODUCT DETAIL--
+sql.create_product_details = INSERT INTO `webshop`.`product_detail` (`name_ua`,`color_ua`,`size_ua`,`about_ua`,`name_en`,`color_en`,`size_en`,`about_en`,`photo_1`,`photo_2`,`photo_3`,`product_id`) VALUES (?,?,?,?,?,?,?,?,?,?,?,?);
+sql.read_product_details_by_id = SELECT * FROM `webshop`.`product_detail` WHERE `id` = ?;
+sql.update_product_details = UPDATE `webshop`.`product_detail` SET `name_ua`=?,`color_ua`=?,`size_ua`=?,`about_ua`=?,`name_en`=?,`color_en`=?,`size_en`=?,`about_en`=?,`photo_1`=?,`photo_2`=?,`photo_3`=?,`product_id`=? WHERE `id`=?;
+sql.delete_product_details = DELETE FROM `webshop`.`product_detail` WHERE `id` = ?;
 
+################### SQL QUERIES --PRODUCT--
+sql.create_product = INSERT INTO `webshop`.`product` (`price`,`amount`,`ordered_amount`,`category_id`) VALUES (?,?,?,?);
+sql.read_product_by_id = SELECT * FROM `webshop`.`product` WHERE `id` = ?;
+sql.update_product = UPDATE `webshop`.`product` SET `price`=?,`amount`=?,`ordered_amount`=?,`category_id`=? WHERE `id`=?;
+sql.delete_product = DELETE FROM `webshop`.`product` WHERE `id` = ?;
+
+################### SQL QUERIES --PRODUCT--
+sql.create_category = INSERT INTO `webshop`.`category` (`name_ua`,`name_en`,`description_ua`,`description_en`) VALUES (?,?,?,?);
+sql.read_category_by_id = SELECT * FROM `webshop`.`category` WHERE `id` = ?;
+sql.update_category = UPDATE `webshop`.`category` SET `name_ua`=?,`name_en`=?,`description_ua`=?,`description_en`=? WHERE `id`=?;
+sql.delete_category = DELETE FROM `webshop`.`category` WHERE `id` = ?;
