--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,10 @@ db.user = root
 db.password = Metalic0s
 
 ################### SQL QUERIES --ACCOUNT--
-sql.create_account = INSERT INTO `webshop`.`account` (`email`, `password`, `create_time`, `role_id`, `shopping_cart_id`) VALUES (?,?,?,?,?);
+sql.create_account = INSERT INTO `webshop`.`account` (`email`, `password`, `role_id`, `shopping_cart_id`,`account_status_id`) VALUES (?,?,?,?,?);
 sql.read_account_by_id = SELECT * FROM `webshop`.`account` WHERE `id` = ?;
 sql.read_account_by_email = SELECT * FROM `webshop`.`account` WHERE `email` = ?;
-sql.update_account = UPDATE `webshop`.`account` SET `email`= ?, `password`= ?, `role_id`= ? WHERE `id` = ?;
+sql.update_account = UPDATE `webshop`.`account` SET `email`= ?, `password`= ?, `role_id`= ?, `shopping_cart_id`=?, `account_status_id`=? WHERE `id` = ?;
 sql.delete_account = DELETE FROM `webshop`.`account` WHERE `id` = ?;
 
 ################### SQL QUERIES --ACCOUNT DETAIL--
@@ -36,7 +36,7 @@ sql.delete_all_products_in_cart = DELETE FROM webshop.shopping_cart_has_product 
 sql.delete_product_in_cart = DELETE FROM webshop.shopping_cart_has_product WHERE `shopping_cart_id` = ? AND `product_id` = ?;
 
 ################### SQL QUERIES --ACCOUNT ORDER --
-sql.create_account_order = INSERT INTO `webshop`.`account_order` (`create_time`,`account_id`,`status_id`,`droped_by_account_id`) VALUES (?,?,?,?);
+sql.create_account_order = INSERT INTO `webshop`.`account_order` (`account_id`,`status_id`) VALUES (?,?);
 sql.read_account_order = SELECT * FROM `webshop`.`account_order` WHERE id = ?;
 sql.update_account_order = UPDATE `webshop`.`account_order` SET `account_id`= ?, `status_id`=?, `droped_by_account_id`=?  WHERE id = ?;
 sql.delete_account_order = DELETE FROM `webshop`.`account_order` WHERE id = ?;
@@ -50,14 +50,18 @@ sql.delete_product_in_order = DELETE FROM webshop.account_order_has_product WHER
 ################### SQL QUERIES --PRODUCT DETAIL--
 sql.create_product_details = INSERT INTO `webshop`.`product_detail` (`name_ua`,`color_ua`,`size_ua`,`about_ua`,`name_en`,`color_en`,`size_en`,`about_en`,`photo_1`,`photo_2`,`photo_3`,`product_id`) VALUES (?,?,?,?,?,?,?,?,?,?,?,?);
 sql.read_product_details_by_id = SELECT * FROM `webshop`.`product_detail` WHERE `id` = ?;
+sql.read_product_details_by_product_id = SELECT * FROM `webshop`.`product_detail` WHERE `product_id` = ?;
 sql.update_product_details = UPDATE `webshop`.`product_detail` SET `name_ua`=?,`color_ua`=?,`size_ua`=?,`about_ua`=?,`name_en`=?,`color_en`=?,`size_en`=?,`about_en`=?,`photo_1`=?,`photo_2`=?,`photo_3`=?,`product_id`=? WHERE `id`=?;
 sql.delete_product_details = DELETE FROM `webshop`.`product_detail` WHERE `id` = ?;
+sql.search_product_detail_by_name = SELECT * FROM webshop.product_detail where name_en like '%?%' or name_ua like '%?%';
 
 ################### SQL QUERIES --PRODUCT--
 sql.create_product = INSERT INTO `webshop`.`product` (`price`,`amount`,`ordered_amount`,`category_id`) VALUES (?,?,?,?);
 sql.read_product_by_id = SELECT * FROM `webshop`.`product` WHERE `id` = ?;
 sql.update_product = UPDATE `webshop`.`product` SET `price`=?,`amount`=?,`ordered_amount`=?,`category_id`=? WHERE `id`=?;
 sql.delete_product = DELETE FROM `webshop`.`product` WHERE `id` = ?;
+sql.read_all_products_in_shop = SELECT * FROM `webshop`.`product`;
+sql.read_all_products_in_category = SELECT * FROM `webshop`.`product` WHERE `category_id` = ?;
 
 ################### SQL QUERIES --PRODUCT--
 sql.create_category = INSERT INTO `webshop`.`category` (`name_ua`,`name_en`,`description_ua`,`description_en`) VALUES (?,?,?,?);
