--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,90 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-         version="4.0">
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+		 http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
 
-    <!-- ============= START PAGE ============ -->
-    <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
-
-    <!-- ============= SERVLETES ============ -->
-    <!-- HOME -->
-    <servlet>
-        <servlet-name>HomeServlet</servlet-name>
-        <servlet-class>com.ostap.komplikevych.webshop.controller.Home</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>HomeServlet</servlet-name>
-        <url-pattern>/home</url-pattern>
-    </servlet-mapping>
-
-    <!-- LOGIN -->
-    <servlet>
-        <servlet-name>LoginServlet</servlet-name>
-        <servlet-class>com.ostap.komplikevych.webshop.controller.Login</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/login</url-pattern>
-    </servlet-mapping>
-
-    <!-- REGISTRATION -->
-    <servlet>
-        <servlet-name>RegServlet</servlet-name>
-        <servlet-class>com.ostap.komplikevych.webshop.controller.Registration</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>RegServlet</servlet-name>
-        <url-pattern>/registration</url-pattern>
-    </servlet-mapping>
-
-    <!-- PROFILE -->
-    <servlet>
-        <servlet-name>Profile</servlet-name>
-        <servlet-class>com.ostap.komplikevych.webshop.controller.Profile</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>Profile</servlet-name>
-        <url-pattern>/profile</url-pattern>
-    </servlet-mapping>
-
-    <!-- CONTROLLER -->
     <servlet>
         <servlet-name>Controller</servlet-name>
         <servlet-class>com.ostap.komplikevych.webshop.controller.Controller</servlet-class>
     </servlet>
+
     <servlet-mapping>
         <servlet-name>Controller</servlet-name>
         <url-pattern>/controller</url-pattern>
     </servlet-mapping>
 
+<!--    <servlet>-->
+<!--        <servlet-name>Home</servlet-name>-->
+<!--        <servlet-class>com.ostap.komplikevych.webshop.controller.Home</servlet-class>-->
+<!--    </servlet>-->
 
-    <!-- ERRORS -->
-    <error-page>
-        <!-- Missing login -->
-        <error-code>401</error-code>
-        <location>/error.jsp</location>
-    </error-page>
-    <error-page>
-        <!-- Forbidden directory listing -->
-        <error-code>403</error-code>
-        <location>/error.jsp</location>
-    </error-page>
-    <error-page>
-        <!-- Missing resource -->
-        <error-code>404</error-code>
-        <location>/error404.jsp</location>
-    </error-page>
-    <error-page>
-        <!-- Uncaught exception -->
-        <error-code>500</error-code>
-        <location>/error.jsp</location>
-    </error-page>
-    <error-page>
-        <!-- Unsupported servlet method -->
-        <error-code>503</error-code>
-        <location>/error.jsp</location>
-    </error-page>
+<!--    <servlet-mapping>-->
+<!--        <servlet-name>Home</servlet-name>-->
+<!--        <url-pattern>/home</url-pattern>-->
+<!--    </servlet-mapping>-->
+
+
+
+
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
+
 </web-app>
