--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ sql.read_shopping_cart = SELECT * FROM `webshop`.`shopping_cart` WHERE id = ?;
 sql.update_shopping_cart = UPDATE `webshop`.`shopping_cart` SET `last_update`= ? WHERE id = ?;
 sql.delete_shopping_cart = DELETE FROM `webshop`.`shopping_cart` WHERE id = ?;
 sql.create_product_in_cart = INSERT INTO webshop.shopping_cart_has_product (`shopping_cart_id`, `product_id`,`product_amount`) VALUES (?,?,?);
-sql.read_all_products_by_cart_id = SELECT cart.id, cart_h_product.product_id as product_id, cart_h_product.product_amount as product_pcs_at_cart, cart.last_update as cart_last_update FROM webshop.shopping_cart AS cart INNER JOIN webshop.shopping_cart_has_product AS cart_h_product ON cart.id = cart_h_product.shopping_cart_id WHERE cart.id = ?;
+sql.read_all_products_by_cart_id = SELECT cart.id,cart_h_product.product_id as product_id, cart_h_product.product_amount,cart.last_update FROM webshop.shopping_cart AS cart INNER JOIN webshop.shopping_cart_has_product AS cart_h_product ON cart.id = cart_h_product.shopping_cart_id WHERE cart.id = ?;
 sql.read_product_from_cart_by_id = SELECT * FROM webshop.shopping_cart_has_product WHERE shopping_cart_id=? AND product_id=?;
 sql.update_product_in_cart = UPDATE webshop.shopping_cart_has_product SET product_amount=? WHERE shopping_cart_id=? AND product_id=?;
 sql.delete_all_products_in_cart = DELETE FROM webshop.shopping_cart_has_product WHERE shopping_cart_id = ?;
