--- a/src/main/resources/log4j2.yaml
+++ b/src/main/resources/log4j2.yaml
@@ -10,8 +10,14 @@ Configuration:
     Console:
       name: Console_Appender
       PatternLayout:
-        Pattern: "%highlight{%-5level}{FATAL=bg_red} %style{%date{yyyy-MM-dd
-                  HH:mm:ss.SSS}}{blue} %class{1}:%L - %highlight{%msg} %xEx{short}%n"
+        Pattern: "%d{${LOG_DATEFORMAT_PATTERN:-yyyy-MM-dd HH:mm:ss}}
+                 %highlight{${LOG_LEVEL_PATTERN:-%5p}}{FATAL=red blink, ERROR=red, WARN=yellow, INFO=green, DEBUG=green, TRACE=blue}
+                 %style{}{magenta} [%-20.20M] %style{%-20.20C{1}:%-3.3L}{cyan} :
+                 %highlight{%msg}{FATAL=bg_red, ERROR=red, WARN=yellow, INFO=black, DEBUG=black, TRACE=blue} %xEx{short}%n"
+
+    #        Pattern: "%style{%date{yyyy-MM-dd HH:mm:ss.SSS}}{black} %highlight{%-5level}{FATAL=bg_red, ERROR=red, WARN=yellow, INFO=green, DEBUG=blue, TRACE=magenta}
+    #                  %class{1}:%L - %highlight{%msg}{FATAL=black bold, ERROR=red bold, WARN=yellow bold} %xEx{short}%n"
+
     #  фільтр який відтинає логування від важчого до легшого
     #      Filters:
     #        ThresholdFilter:
