in progress to fix bug with photo addition

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,9 +10,9 @@
         <servlet-class>com.ostap.komplikevych.webshop.controller.Controller</servlet-class>
         <multipart-config>
             <location>/</location>
-            <max-file-size>20848820</max-file-size>
-            <max-request-size>418018841</max-request-size>
-            <file-size-threshold>1048576</file-size-threshold>
+            <max-file-size>200848820</max-file-size>
+            <max-request-size>4318018841</max-request-size>
+            <file-size-threshold>4048576</file-size-threshold>
         </multipart-config>
     </servlet>
 
@@ -38,7 +38,7 @@
 
         <init-param>
             <param-name>logged-common</param-name>
-            <param-value>logout open-profile-page open-orders-page</param-value>
+            <param-value>logout open-profile-page open-orders-page change-account-details change-account-password</param-value>
         </init-param>
 
         <init-param>
