fixed bug with photo addidng, added opportunity to create products, added PRG pattern

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ cipher.second.key = weJiSEvR5yAC5ftB
 cipher.salt = d#dFf4$
 cipher.charset = UTF-8
 
+################### ETHIC CHECKING
+restricted.words = blunt fuck shit weapon гвинтівка пістолет трава конопля маріхуана
+
 ################### DB SETTINGS
 db.driver.classname = com.mysql.cj.jdbc.Driver
 db.url = jdbc:mysql://localhost:3306/webshop?allowPublicKeyRetrieval=true&sslMode=DISABLED&serverTimezone = UTC&useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8
