ended all needed functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,75 +1,76 @@
 ################### SECURITY SETTINGS
-cipher.first.key = ssdkF$HUy2A#D%kd
-cipher.second.key = weJiSEvR5yAC5ftB
-cipher.salt = d#dFf4$
-cipher.charset = UTF-8
-
-################### ETHIC CHECKING
-restricted.words = blunt fuck shit weapon гвинтівка пістолет трава конопля маріхуана
-
+cipher.first.key=ssdkF$HUy2A#D%kd
+cipher.second.key=weJiSEvR5yAC5ftB
+cipher.salt=d#dFf4$
+cipher.charset=UTF-8
+################### ETHIC BANNED WORDS CHECKING
+restricted.words=blunt fuck shit weapon weed гвинтівка пістолет трава конопля маріхуана
 ################### DB SETTINGS
-db.driver.classname = com.mysql.cj.jdbc.Driver
-db.url = jdbc:mysql://localhost:3306/webshop?allowPublicKeyRetrieval=true&sslMode=DISABLED&serverTimezone = UTC&useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8
-db.user = root
-db.password = Metalic0s
-
+db.driver.classname=com.mysql.cj.jdbc.Driver
+db.url=jdbc:mysql://localhost:3306/webshop?allowPublicKeyRetrieval=true&sslMode=DISABLED&serverTimezone = UTC&useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8
+db.user=root
+db.password=Metalic0s
 ################### SQL QUERIES --ACCOUNT--
-sql.create_account = INSERT INTO `webshop`.`account` (`email`, `password`, `role_id`, `shopping_cart_id`,`account_status_id`) VALUES (?,?,?,?,?);
-sql.read_account_by_id = SELECT * FROM `webshop`.`account` WHERE `id` = ?;
-sql.read_account_by_email = SELECT * FROM `webshop`.`account` WHERE `email` = ?;
-sql.update_account = UPDATE `webshop`.`account` SET `email`= ?, `password`= ?, `role_id`= ?, `shopping_cart_id`=?, `account_status_id`=? WHERE `id` = ?;
-sql.delete_account = DELETE FROM `webshop`.`account` WHERE `id` = ?;
-
+sql.create_account=INSERT INTO `webshop`.`account` (`email`, `password`, `role_id`, `shopping_cart_id`,`account_status_id`) VALUES (?,?,?,?,?);
+sql.read_account_by_id=SELECT * FROM `webshop`.`account` WHERE `id` = ?;
+sql.read_account_by_email=SELECT * FROM `webshop`.`account` WHERE `email` = ?;
+sql.read_all_accounts=SELECT * FROM `webshop`.`account`;
+sql.update_account=UPDATE `webshop`.`account` SET `email`= ?, `password`= ?, `role_id`= ?, `shopping_cart_id`=?, `account_status_id`=? WHERE `id` = ?;
+sql.delete_account=DELETE FROM `webshop`.`account` WHERE `id` = ?;
 ################### SQL QUERIES --ACCOUNT DETAIL--
-sql.create_account_details = INSERT INTO `webshop`.`account_detail` (`phone`,`zip_code`,`last_update`,`surname_ua`,`first_name_ua`,`patronymic_ua`,`country_ua`,`city_ua`,`street_ua`,`building_ua`,`flat_ua`,`surname_en`,`first_name_en`,`patronymic_en`,`country_en`,`city_en`,`street_en`,`building_en`,`flat_en`,`account_photo`,`account_id`) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
-sql.read_account_details_by_id = SELECT * FROM `webshop`.`account_detail` WHERE `account_id` = ?;
-sql.update_account_details = UPDATE `webshop`.`account_detail` SET `phone`= ?,`zip_code`= ?,`last_update`= ?,`surname_ua`= ?,`first_name_ua`= ?,`patronymic_ua`= ?,`country_ua`= ?, `city_ua`= ?,`street_ua`= ?,`building_ua`= ?,`flat_ua`= ?,`surname_en`= ?,`first_name_en`= ?,`patronymic_en`= ?,`country_en`= ?,`city_en`= ?,`street_en`= ?,`building_en`= ?,`flat_en`= ?,`account_id`= ? WHERE id = ?;
+sql.create_account_details=INSERT INTO `webshop`.`account_detail` (`phone`,`zip_code`,`last_update`,`surname_ua`,`first_name_ua`,`patronymic_ua`,`country_ua`,`city_ua`,`street_ua`,`building_ua`,`flat_ua`,`surname_en`,`first_name_en`,`patronymic_en`,`country_en`,`city_en`,`street_en`,`building_en`,`flat_en`,`account_photo`,`account_id`) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
+sql.read_account_details_by_id=SELECT * FROM `webshop`.`account_detail` WHERE `account_id` = ?;
+sql.update_account_details=UPDATE `webshop`.`account_detail` SET `phone`= ?,`zip_code`= ?,`last_update`= ?,`surname_ua`= ?,`first_name_ua`= ?,`patronymic_ua`= ?,`country_ua`= ?, `city_ua`= ?,`street_ua`= ?,`building_ua`= ?,`flat_ua`= ?,`surname_en`= ?,`first_name_en`= ?,`patronymic_en`= ?,`country_en`= ?,`city_en`= ?,`street_en`= ?,`building_en`= ?,`flat_en`= ?,`account_id`= ? WHERE id = ?;
+sql.update_account_photo=UPDATE `webshop`.`account_detail` SET `account_photo`= ? WHERE id = ?;
 #sql.update_account_details = UPDATE `webshop`.`account_detail` SET `phone`= ?,`zip_code`= ?,`last_update`= ?,`surname_ua`= ?,`first_name_ua`= ?,`patronymic_ua`= ?,`country_ua`= ?, `city_ua`= ?,`street_ua`= ?,`building_ua`= ?,`flat_ua`= ?,`surname_en`= ?,`first_name_en`= ?,`patronymic_en`= ?,`country_en`= ?,`city_en`= ?,`street_en`= ?,`building_en`= ?,`flat_en`= ?,`account_photo`= ?,`account_id`= ? WHERE id = ?;
-sql.delete_account_details = DELETE FROM `webshop`.`account_detail` WHERE `account_id` = ?;
-
+sql.delete_account_details=DELETE FROM `webshop`.`account_detail` WHERE `account_id` = ?;
 ################### SQL QUERIES --SHOPPING CART--
-sql.create_shopping_cart = INSERT INTO `webshop`.`shopping_cart` (`last_update`) VALUES (?);
-sql.read_shopping_cart = SELECT * FROM `webshop`.`shopping_cart` WHERE id = ?;
-sql.update_shopping_cart = UPDATE `webshop`.`shopping_cart` SET `last_update`= ? WHERE id = ?;
-sql.delete_shopping_cart = DELETE FROM `webshop`.`shopping_cart` WHERE id = ?;
-sql.create_product_in_cart = INSERT INTO webshop.shopping_cart_has_product (`shopping_cart_id`, `product_id`,`product_amount`) VALUES (?,?,?);
-sql.read_all_products_by_cart_id = SELECT cart.id,cart_h_product.product_id as product_id, cart_h_product.product_amount,cart.last_update FROM webshop.shopping_cart AS cart INNER JOIN webshop.shopping_cart_has_product AS cart_h_product ON cart.id = cart_h_product.shopping_cart_id WHERE cart.id = ?;
-sql.read_product_from_cart_by_id = SELECT * FROM webshop.shopping_cart_has_product WHERE shopping_cart_id=? AND product_id=?;
-sql.update_product_in_cart = UPDATE webshop.shopping_cart_has_product SET product_amount=? WHERE shopping_cart_id=? AND product_id=?;
-sql.delete_all_products_in_cart = DELETE FROM webshop.shopping_cart_has_product WHERE shopping_cart_id = ?;
-sql.delete_product_in_cart = DELETE FROM webshop.shopping_cart_has_product WHERE `shopping_cart_id` = ? AND `product_id` = ?;
-
+sql.create_shopping_cart=INSERT INTO `webshop`.`shopping_cart` (`last_update`) VALUES (?);
+sql.read_shopping_cart=SELECT * FROM `webshop`.`shopping_cart` WHERE id = ?;
+sql.update_shopping_cart=UPDATE `webshop`.`shopping_cart` SET `last_update`= ? WHERE id = ?;
+sql.delete_shopping_cart=DELETE FROM `webshop`.`shopping_cart` WHERE id = ?;
+sql.create_product_in_cart=INSERT INTO webshop.shopping_cart_has_product (`shopping_cart_id`, `product_id`,`product_amount`) VALUES (?,?,?);
+sql.read_all_products_by_cart_id=SELECT cart.id,cart_h_product.product_id as product_id, cart_h_product.product_amount,cart.last_update FROM webshop.shopping_cart AS cart INNER JOIN webshop.shopping_cart_has_product AS cart_h_product ON cart.id = cart_h_product.shopping_cart_id WHERE cart.id = ?;
+sql.read_product_from_cart_by_id=SELECT * FROM webshop.shopping_cart_has_product WHERE shopping_cart_id=? AND product_id=?;
+sql.update_product_in_cart=UPDATE webshop.shopping_cart_has_product SET product_amount=? WHERE shopping_cart_id=? AND product_id=?;
+sql.delete_all_products_in_cart=DELETE FROM webshop.shopping_cart_has_product WHERE shopping_cart_id = ?;
+sql.delete_product_in_cart=DELETE FROM webshop.shopping_cart_has_product WHERE `shopping_cart_id` = ? AND `product_id` = ?;
 ################### SQL QUERIES --ACCOUNT ORDER --
-sql.create_account_order = INSERT INTO `webshop`.`account_order` (`account_id`,`status_id`) VALUES (?,?);
-sql.read_account_order = SELECT * FROM `webshop`.`account_order` WHERE id = ?;
-sql.update_account_order = UPDATE `webshop`.`account_order` SET `account_id`= ?, `status_id`=?, `droped_by_account_id`=?  WHERE id = ?;
-sql.delete_account_order = DELETE FROM `webshop`.`account_order` WHERE id = ?;
-sql.create_product_in_order = INSERT INTO webshop.account_order_has_product (`account_order_id`, `product_id`,`price`,`product_amount`,`create_time`,`last_update`) VALUES (?,?,?,?,?,?);
-sql.read_all_products_in_order = SELECT * FROM webshop.account_order AS a_order INNER JOIN webshop.account_order_has_product AS order_h_product ON a_order.id = order_h_product.account_order_id WHERE a_order.id = ?;
-sql.read_product_from_order_by_id = SELECT * FROM webshop.account_order_has_product WHERE `account_order_id` = ? AND `product_id` = ?;
-sql.update_product_in_order = UPDATE webshop.account_order_has_product SET price=?,product_amount=? WHERE account_order_id=? AND product_id=?;
-sql.delete_all_products_in_order = DELETE FROM webshop.account_order_has_product WHERE account_order_id = ?;
-sql.delete_product_in_order = DELETE FROM webshop.account_order_has_product WHERE `account_order_id` = ? AND `product_id` = ?;
-
+sql.create_account_order=INSERT INTO `webshop`.`account_order` (`account_id`, `total_order_price`, `delivery_id`, `status_id`) VALUES (?,?,?,?);
+sql.read_account_order=SELECT * FROM `webshop`.`account_order` WHERE id = ?;
+sql.read_all_account_orders_by_account_id=SELECT * FROM `webshop`.`account_order` WHERE account_id = ? ORDER BY `create_time` DESC;
+sql.read_all_account_orders=SELECT * FROM `webshop`.`account_order` ORDER BY `create_time` DESC;
+sql.update_account_order=UPDATE `webshop`.`account_order` SET `account_id`= ?, `total_order_price`= ?, `delivery_id`= ?, `status_id`=?, `droped_by_account_id`=?  WHERE id = ?;
+sql.delete_account_order=DELETE FROM `webshop`.`account_order` WHERE id = ?;
+sql.create_product_in_order=INSERT INTO webshop.account_order_has_product (`account_order_id`, `product_id`,`price`,`product_amount`,`create_time`,`last_update`) VALUES (?,?,?,?,?,?);
+sql.read_all_products_in_order=SELECT * FROM webshop.account_order AS a_order INNER JOIN webshop.account_order_has_product AS order_h_product ON a_order.id = order_h_product.account_order_id WHERE a_order.id = ?;
+sql.read_product_from_order_by_id=SELECT * FROM webshop.account_order_has_product WHERE `account_order_id` = ? AND `product_id` = ?;
+sql.update_product_in_order=UPDATE webshop.account_order_has_product SET price=?,product_amount=? WHERE account_order_id=? AND product_id=?;
+sql.delete_all_products_in_order=DELETE FROM webshop.account_order_has_product WHERE account_order_id = ?;
+sql.delete_product_in_order=DELETE FROM webshop.account_order_has_product WHERE `account_order_id` = ? AND `product_id` = ?;
 ################### SQL QUERIES --PRODUCT DETAIL--
-sql.create_product_details = INSERT INTO `webshop`.`product_detail` (`name_ua`,`color_ua`,`size_ua`,`about_ua`,`name_en`,`color_en`,`size_en`,`about_en`,`photo_1`,`photo_2`,`photo_3`,`product_id`) VALUES (?,?,?,?,?,?,?,?,?,?,?,?);
-sql.read_product_details_by_id = SELECT * FROM `webshop`.`product_detail` WHERE `id` = ?;
-sql.read_product_details_by_product_id = SELECT * FROM `webshop`.`product_detail` WHERE `product_id` = ?;
-sql.update_product_details = UPDATE `webshop`.`product_detail` SET `name_ua`=?,`color_ua`=?,`size_ua`=?,`about_ua`=?,`name_en`=?,`color_en`=?,`size_en`=?,`about_en`=?,`photo_1`=?,`photo_2`=?,`photo_3`=?,`product_id`=? WHERE `id`=?;
-sql.delete_product_details = DELETE FROM `webshop`.`product_detail` WHERE `id` = ?;
-sql.search_product_detail_by_name = SELECT * FROM webshop.product_detail where name_en like '%?%' or name_ua like '%?%';
-
+sql.create_product_details=INSERT INTO `webshop`.`product_detail` (`name_ua`,`color_ua`,`size_ua`,`about_ua`,`name_en`,`color_en`,`size_en`,`about_en`,`photo_1`,`photo_2`,`photo_3`,`product_id`) VALUES (?,?,?,?,?,?,?,?,?,?,?,?);
+sql.read_product_details_by_id=SELECT * FROM `webshop`.`product_detail` WHERE `id` = ?;
+sql.read_product_details_by_product_id=SELECT * FROM `webshop`.`product_detail` WHERE `product_id` = ?;
+sql.update_product_details=UPDATE `webshop`.`product_detail` SET `name_ua`=?,`color_ua`=?,`size_ua`=?,`about_ua`=?,`name_en`=?,`color_en`=?,`size_en`=?,`about_en`=?,`photo_1`=?,`photo_2`=?,`photo_3`=?,`product_id`=? WHERE `id`=?;
+sql.delete_product_details=DELETE FROM `webshop`.`product_detail` WHERE `id` = ?;
+sql.search_product_detail_by_name=SELECT * FROM webshop.product_detail where name_en like '%?%' or name_ua like '%?%';
 ################### SQL QUERIES --PRODUCT--
-sql.create_product = INSERT INTO `webshop`.`product` (`price`,`amount`,`ordered_amount`,`category_id`) VALUES (?,?,?,?);
-sql.read_product_by_id = SELECT * FROM `webshop`.`product` WHERE `id` = ?;
-sql.update_product = UPDATE `webshop`.`product` SET `price`=?,`amount`=?,`ordered_amount`=?,`category_id`=? WHERE `id`=?;
-sql.delete_product = DELETE FROM `webshop`.`product` WHERE `id` = ?;
-sql.read_all_products_in_shop = SELECT * FROM `webshop`.`product`;
-sql.read_all_products_in_category = SELECT * FROM `webshop`.`product` WHERE `category_id` = ?;
-
+sql.create_product=INSERT INTO `webshop`.`product` (`price`,`amount`,`ordered_amount`,`category_id`) VALUES (?,?,?,?);
+sql.read_product_by_id=SELECT * FROM `webshop`.`product` WHERE `id` = ?;
+sql.update_product=UPDATE `webshop`.`product` SET `price`=?,`amount`=?,`ordered_amount`=?,`category_id`=? WHERE `id`=?;
+sql.delete_product=DELETE FROM `webshop`.`product` WHERE `id` = ?;
+sql.read_all_products_in_shop=SELECT * FROM `webshop`.`product`;
+sql.read_all_products_in_category=SELECT * FROM `webshop`.`product` WHERE `category_id` = ?;
 ################### SQL QUERIES --CATEGORY--
-sql.create_category = INSERT INTO `webshop`.`category` (`name_ua`,`name_en`,`description_ua`,`description_en`) VALUES (?,?,?,?);
-sql.read_category_by_id = SELECT * FROM `webshop`.`category` WHERE `id` = ?;
-sql.read_all_categories = SELECT * FROM `webshop`.`category` ;
-sql.update_category = UPDATE `webshop`.`category` SET `name_ua`=?,`name_en`=?,`description_ua`=?,`description_en`=? WHERE `id`=?;
-sql.delete_category = DELETE FROM `webshop`.`category` WHERE `id` = ?;
+sql.create_category=INSERT INTO `webshop`.`category` (`name_ua`,`name_en`,`description_ua`,`description_en`) VALUES (?,?,?,?);
+sql.read_category_by_id=SELECT * FROM `webshop`.`category` WHERE `id` = ?;
+sql.read_all_categories=SELECT * FROM `webshop`.`category` ;
+sql.update_category=UPDATE `webshop`.`category` SET `name_ua`=?,`name_en`=?,`description_ua`=?,`description_en`=? WHERE `id`=?;
+sql.delete_category=DELETE FROM `webshop`.`category` WHERE `id` = ?;
+################### SQL QUERIES --DELIVERY--
+sql.create_delivery=INSERT INTO `webshop`.`delivery` (`name_ua`,`name_en`,`average_delivery_time`,`delivery_price`) VALUES (?,?,?,?);
+sql.read_delivery_by_id=SELECT * FROM `webshop`.`delivery` WHERE `id` = ?;
+sql.read_all_deliveries=SELECT * FROM `webshop`.`delivery`;
+sql.update_delivery=UPDATE `webshop`.`delivery` SET `name_ua`=?,`name_en`=?,`average_delivery_time`=?,`delivery_price`=? WHERE `id`=?;
+sql.delete_delivery_by_id=DELETE FROM `webshop`.`delivery` WHERE `id` = ?;
