--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -1,1 +1,53 @@
+#########################################################
+#              MAKE ORDER PAGE
+#########################################################
+make-order.welcome=, thanks for your order!
+make-order.your-info=Your information:
+make-order.your-products=Your Products:
+make-order.table-products.title.name=Name
+make-order.table-products.title.price=Price
+make-order.table-products.title.amount=Amount
+make-order.table-products.currency-name=UAH
+make-order.result.products-price=Products price:
+make-order.result.delivery-price=Delivery price:
+make-order.result.totally=Totally:
+make-order.button.cancel=Cancel
+make-order.button.approve=Approve order
+make-order.your-profile-address=Your profile address:
+make-order.warning.message.text=If your information has changed, please update it in your
+make-order.warning.link.text=profile
+#########################################################
+#              NAVIGATION MENU
+#########################################################
+loggingMenu.login=Sign in
+loggingMenu.registration=Registration
+loggingMenu.shoppingCart=Shopping Cart
+loggingMenu.yourProfile=Your profile
+loggingMenu.yourOrders=Your Orders
+loggingMenu.users=Users
+loggingMenu.userOrders=User orders
+loggingMenu.createCategory=Create category
+loggingMenu.createProduct=Create product
+loggingMenu.logout=Sign out
+#########################################################
+#              USER ORDERS (ADMIN)
+#########################################################
+orders.title.orderId=Order ID
+orders.title.created=Created
+orders.title.customer=Customer
+orders.title.showDetails=Show Details
+orders.title.status=Status
+orders.button.details=Details
+orders.button.refreshStatus=OK
+orders.status.registered=REGISTERED
+orders.status.paid=PAID
+orders.status.canceled=CANCELED
+orders.search.selector.orderId=Order ID
+orders.search.selector.created=reated
+orders.search.selector.customer=Customer
+orders.search.selector.status=Status
+orders.search.textField=Search order ...
+orders.search.button=Search
+
+
 
